Styled index.html Layout and Styled Nav Bar

--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -3,29 +3,80 @@
 }
 
 header{
-	outline-style: solid;
-	outline-color: black;
-	text-align: center;
-	font-size: 2em;
-	height: 9em;
+	background-color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 0 25px 0 black;
 }
 
-div{
-	 padding: 20px; 
-	 border: 1px;
-	 text-align: center;
-	 outline-style: solid;
-	 outline-color: black;
+header * {
+    display: inline;
+}
+
+header li {
+    margin: 20px;
+}
+
+header li a {
+    color: black;
+    text-decoration: none;
+}
+
+body {
+    height: 125vh;
+    font-family: sans-serif;
+    margin-top: 80px;
+    padding: 100px;
 }
 
 p{
 	font-size: 20px;
 }
 
+.flex-parent {
+	display: flex;
+	justify-content: space-around;
+}
+
+.flex-child {
+	padding: 5px;
+	width: 400px;
+	height: auto;
+	border-style: solid;
+	border-color: black;
+}
+
+.stretch-parent {
+	display: flex;
+	justify-content: space-around;
+}
+
+.stretch-child {
+	align-content: stretch;
+	padding: 5px;
+	width: 80em;
+	height: auto;
+	border-style: solid;
+	border-color: black;
+}
+
 footer{
 	text-align: center;
-	outline-style: solid;
-	outline-color: black;
+	border-style: solid;
+	border-color: black;
+}
+
+footer * {
+    display: inline;
+}
+
+footer li {
+    margin: 20px;
 }
 
 [class*="col-"] {
