--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -16,7 +16,6 @@ header{
     height: 80px;
     display: flex;
     align-items: center;
-    box-shadow: 0 0 25px 0 black;
 }
 
 header * {
@@ -35,18 +34,40 @@ header li a {
 body {
     height: auto;
     font-family: sans-serif;
-    margin-top: 65px;
     padding: 100px;
+	background-image: url("../images/arcade.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 p{
 	font-size: 20px;
 }
 
-span {
-	padding: 10em;
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
+.background {
+	background-color: white;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+}
+
+.outline {
+	text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
+	color: white;
+}
+
+/* index.html Styles */
 .flex-parent {
 	display: flex;
 	justify-content: space-around;
@@ -54,10 +75,15 @@ span {
 
 .flex-child {
 	padding: 5px;
-	width: 400px;
+	width: auto;
 	height: auto;
 	border-style: solid;
+	border-width: 1px;
 	border-color: black;
+	margin-top: 30px;
+	margin-left: 30px;
+	margin-right: 30px;
+	background-color: white;
 	box-shadow: 0 0 25px 0 black;
 }
 
@@ -66,39 +92,83 @@ span {
 	justify-content: space-around;
 }
 
-.stretch-child {
+.stretch-child-one {
 	padding: 20px;
-	width: 79.5em;
+	width: 78em;
 	height: auto;
 	border-style: solid;
+	border-width: 1px;
 	border-color: black;
-	box-shadow: 0 0 25px 0 black;
 	margin-top: 30px;
+	background-color: white;
+	text-align: center;
+	box-shadow: 0 0 25px 0 black;
+	background-image: url("../images/tree.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.stretch-child-two {
+	padding: 20px;
+	width: 78em;
+	height: auto;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	background-color: white;
+	background-image: url("../images/sale.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	box-shadow: 0 0 25px 0 black;
+	text-align: center;
+	color: white;
 }
 
 /* Games.html Styles */
 .flex-container-wrap {
-  list-style: none;
-  display: flex;
-  justify-content: space-around;
+	list-style: none;
+	display: flex;
+	justify-content: space-around;
 }
 
 .wrap    { 
-  flex-wrap: wrap;
+	flex-wrap: wrap;
 }  
 
 .flex-item-wrap {
-  padding: 5px;
-	width: 400px;
+	padding: 5px;
+	width: auto;
 	height: auto;
 	border-style: solid;
+	border-width: 1px;
 	border-color: black;
+	margin-top: 30px;
+	margin-bottom: 40px;
+	margin-right: 30px;
+	background-color: white;
 	box-shadow: 0 0 25px 0 black;
-  margin-top: 30px;
+}
 
-  font-weight: bold;
-  font-size: 2em;
-  text-align: center;
+.stretch-child-three {
+	padding: 20px;
+	width: 77em;
+	height: auto;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	margin-top: 40px;
+	margin-left: 30px;
+	margin-right: 30px;
+	background-color: white;
+	text-align: center;
+	box-shadow: 0 0 25px 0 black;
+	background-image: url("../images/pixeltown.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 /* Footer Styles */
@@ -109,7 +179,6 @@ span {
     width: 100%;
     background-color: white;
     text-align: center;
-	box-shadow: 0 0 25px 0 black;
 }
 
 [class*="col-"] {
