--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -42,7 +42,8 @@ body {
 }
 
 p{
-	font-size: 20px;
+	font-size: 18px;
+	text-align: center;
 }
 
 img {
@@ -181,6 +182,47 @@ img {
     text-align: center;
 }
 
+/* Button Styles */
+.button {
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 15px;
+  padding: 20px;
+  width: 240px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+/* Col Class Styles */
 [class*="col-"] {
     float: left;
     padding: 15px;
