Added Quick Scroll Button Using jquery for Second Feature

--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -229,6 +229,45 @@ address{
   right: 0;
 }
 
+#buttonScroll {
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 15px;
+  padding: 20px;
+  width: 240px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+#buttonScroll span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+#buttonScroll span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+#buttonScroll:hover span {
+  padding-right: 25px;
+}
+
+#buttonScroll:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
 /* Accordian Styles */
 .accordion {
   list-style-type: none;
