--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -179,6 +179,38 @@ address{
 	background-size: cover;
 }
 
+/* consoles.html Styles */
+.flex-child-two {
+	padding: 5px;
+	width: auto;
+	height: auto;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	margin-left: 30px;
+	margin-right: 30px;
+	background-color: white;
+	box-shadow: 0 0 25px 0 black;
+}
+
+.stretch-child-four {
+	padding: 20px;
+	width: 78em;
+	height: auto;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	margin-top: 30px;
+	background-color: white;
+	text-align: center;
+	box-shadow: 0 0 25px 0 black;
+	background-image: url("../images/neon.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
 /* Footer Styles */
 .footer{
 	position: absolute;
@@ -225,6 +257,45 @@ address{
 }
 
 .button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.buttontwo {
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 15px;
+  padding: 20px;
+  width: 340px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.buttontwo span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.buttontwo span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.buttontwo:hover span {
+  padding-right: 25px;
+}
+
+.buttontwo:hover span:after {
   opacity: 1;
   right: 0;
 }
